--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/ccoenraets/loyalty",
   "dependencies": {
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
     "compression": "^1.2.2",
     "express": "^4.10.6",
     "path": "^0.4.9",
     "pg": "^4.1.1",
-    "q": "^1.1.2"
+    "q": "^1.1.2",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   }
 }
