Adding/removing picture assets

--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "Belgopedia",
+  "name": "nba-team-efficiency",
   "version": "0.0.0",
-  "description": "Belgopedia",
+  "description": "nba team efficiency by pace",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ccoenraets/belgopedia"
+    "url": "https://github.com/benstew/"
   },
-  "author": "Christophe Coenraets",
+  "author": "Ben Stewart",
   "bugs": {
-    "url": "https://github.com/ccoenraets/loyalty/issues"
+    "url": "https://github.com/benstew"
   },
-  "homepage": "https://github.com/ccoenraets/loyalty",
+  "homepage": "https://github.com/benstew",
   "dependencies": {
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
