--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/benstew/"
+    "url": "https://github.com/benstew/NBA-Team-Pace"
   },
   "author": "Ben Stewart",
   "bugs": {
